--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -28,7 +28,7 @@ import { projects } from "@cv";
                         class="github-code-link"
                         href={github}
                         target="_blank"
-                        title={`Ver código fuente del proyecto ${name}`}
+                        title={`Ver código del proyecto ${name}`}
                       >
                         <GitHub />
                       </a>
